# parallel-programming

balancing-methods/: CMakeLists.txt  balancing.cpp
copyin/: CMakeLists.txt  copyin.cpp
fft/: CMakeLists.txt  fft-vis.py  fft.cpp
intro/: CMakeLists.txt  access.cpp  hello.cpp  sum.cpp
lab1/: CMakeLists.txt  task-0.cpp  task-1.cpp  task-2.cpp  times.py
lab2/: CMakeLists.txt  lab2.cpp
matrix/: CMakeLists.txt  matrix-simple.cpp  matrix.cpp  matrix_def.cpp
sudoku/: CMakeLists.txt  Sudoku.cpp  Sudoku.h  main.cpp
sudoku/boards/: game5.xml
